# magic-lang

./: .gitignore  CMakeLists.txt  README.md  grammar.txt
include/: ast.h  error.h  file_reader.h  langdef.h  lexer.h  parser.h  token.h
resources/: source.txt
src/: ast.cpp  error.cpp  errors.cpp  file_reader.cpp  langdef.cpp  lexer.cpp  main.cpp  parser.cpp  token.cpp
tests/: CMakeLists.txt  test_file_reader.cpp  test_langdef.cpp
